Terminal added, refactoring